[gd_scene load_steps=15 format=2]

[ext_resource path="res://Retron2000.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/gui/clock.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/energy.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/health.png" type="Texture" id=4]
[ext_resource path="res://assets/player/player0002.png" type="Texture" id=5]
[ext_resource path="res://creds_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/items/wooden stick.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/small_button.png" type="Texture" id=8]
[ext_resource path="res://gui/savecard.gd" type="Script" id=9]
[ext_resource path="res://assets/gui/highlight.png" type="Texture" id=10]
[ext_resource path="res://font.tres" type="DynamicFont" id=11]
[ext_resource path="res://turn_red.gd" type="Script" id=12]

[sub_resource type="RichTextEffect" id=2]
resource_name = "RichTextTurnColor"
script = ExtResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[node name="save" type="TextureButton"]
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="delete" type="Control" parent="."]
margin_top = -24.0
margin_right = 40.0
margin_bottom = 16.0

[node name="text" type="RichTextLabel" parent="delete"]
margin_left = 11.0
margin_top = 342.0
margin_right = 239.0
margin_bottom = 447.0
custom_colors/font_color_shadow = Color( 0.956863, 0.509804, 0.509804, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = "[center]hold DELETE to delete this save![/center]"
text = "hold DELETE to delete this save!"
scroll_active = false
custom_effects = [ SubResource( 2 ) ]

[node name="delete_timer" type="Timer" parent="delete"]

[node name="box" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_bottom = -24.0

[node name="NinePatchRect" type="NinePatchRect" parent="box"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40

[node name="highlight" type="NinePatchRect" parent="box"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 11.0
margin_right = 217.0
margin_bottom = 317.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
patch_margin_left = 100
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100

[node name="Label" type="Label" parent="box"]
margin_left = 21.0
margin_top = 41.0
margin_right = 228.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 6 )
text = "save 1"
align = 1
valign = 1

[node name="player" type="Sprite" parent="box"]
position = Vector2( 129, 151 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="weapon" type="Sprite" parent="box/player"]
show_behind_parent = true
position = Vector2( -132, 24 )
rotation = -0.523598
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="box"]
margin_left = 25.0
margin_top = 207.0
margin_right = 226.0
margin_bottom = 311.0
custom_constants/separation = -5
alignment = 1

[node name="hbox" type="HBoxContainer" parent="box/VBoxContainer"]
margin_right = 201.0
margin_bottom = 34.0
custom_constants/separation = 0
alignment = 1

[node name="icon" type="Control" parent="box/VBoxContainer/hbox"]
margin_left = 77.0
margin_right = 107.0
margin_bottom = 34.0
rect_min_size = Vector2( 30, 30 )

[node name="sprite" type="Sprite" parent="box/VBoxContainer/hbox/icon"]
position = Vector2( 15, 17 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="value" type="Label" parent="box/VBoxContainer/hbox"]
margin_left = 107.0
margin_right = 124.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 0.752941, 0.752941, 1 )
custom_colors/font_color_shadow = Color( 0.956863, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox2" type="HBoxContainer" parent="box/VBoxContainer"]
margin_top = 29.0
margin_right = 201.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 40 )
custom_constants/separation = 0
alignment = 1

[node name="icon" type="Control" parent="box/VBoxContainer/hbox2"]
margin_left = 77.0
margin_right = 107.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )

[node name="sprite" type="Sprite" parent="box/VBoxContainer/hbox2/icon"]
position = Vector2( 15, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="value" type="Label" parent="box/VBoxContainer/hbox2"]
margin_left = 107.0
margin_top = 3.0
margin_right = 124.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.843137, 0.921569, 0.729412, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.494118, 0.678431, 0.45098, 1 )
custom_fonts/font = SubResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox3" type="HBoxContainer" parent="box/VBoxContainer"]
margin_top = 64.0
margin_right = 201.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 40 )
custom_constants/separation = 0
alignment = 1

[node name="icon" type="Control" parent="box/VBoxContainer/hbox3"]
margin_left = 8.0
margin_right = 38.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )

[node name="sprite" type="Sprite" parent="box/VBoxContainer/hbox3/icon"]
position = Vector2( 15, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="value" type="Label" parent="box/VBoxContainer/hbox3"]
margin_left = 38.0
margin_top = 3.0
margin_right = 192.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.752941, 0.776471, 0.847059, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.211765, 0.215686, 0.305882, 1 )
custom_fonts/font = SubResource( 1 )
text = "00:00.00.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="delete_tween" type="Tween" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_save_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_save_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_save_pressed"]
[connection signal="timeout" from="delete/delete_timer" to="." method="_on_delete_timer_timeout"]
